Added divs for displaying HOST MODE, GUEST MODE, and Sychronizing

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,4 +22,8 @@ html
         |  users connected
       ul.dropdown-menu
 
+    .host-mode HOST MODE
+    .guest-mode GUEST MODE
+    .sync Synchronizing...
+
     block content
