Add #playlist media query

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -251,3 +251,10 @@ tr.highlight td {
 .angel-beats {
   font-size: 40px;
 }
+
+
+@media only screen and (max-width: 768px) {
+  #playlist {
+    padding-bottom: 14px;
+  }
+}
