--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -248,6 +248,32 @@ tr.highlight td {
   z-index: 10000;
 }
 
+// Progress bars
+// -------------------------
+$progress-bar-info-bg: $brand-primary;
+
+.progress-bar-inverse .progress-bar {
+  background-color: #333;
+}
+
+.progress-bar-success .progress-bar {
+  background-color: $brand-success;
+}
+
+.progress {
+  height: 5px;
+  border-radius: 4px;
+  background-image: linear-gradient(to bottom, #ffffff 60%, #f8f8f8 100%);
+}
+
+.progress .progress-bar {
+  box-shadow: none;
+  font-size: 10px;
+  line-height: 12px;
+  text-shadow: 0px 1px 1px #222;
+}
+
+
 @mixin animation($name, $duration: 1s, $delay: 0, $ease: linear, $iterations: infinite, $endState: normal) {
   -webkit-animation: $name $duration $delay $ease $iterations $endState;
   -moz-animation: $name $duration $delay $ease $iterations $endState;
