--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Angel Beats
-    link(href='/stylesheets/main.css', rel='stylesheet')
+    link(href='/stylesheets/style.css', rel='stylesheet')
     script(src='/javascripts/lib/jquery.min.js')
     script(src='/javascripts/lib/jquery.bootstrap-growl.min.js')
     script(src='/javascripts/lib/jquery.ui.widget.js')
