Upgraded to bootstrap 3.1 sass

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -34,7 +34,7 @@ $grid-float-breakpoint: $screen-phone;
 @import "progrecss.css.scss";
 @import "animate.css.scss";
 @import "jquery.fileupload.css.scss";
-@import "bootstrap/bootstrap";
+@import "bootstrap";
 
 
 body {
