Cache jquery elements and other minor refactorings

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -51,7 +51,7 @@ html
         span.text-muted &nbsp;/&nbsp;
         span.text-muted#timeLeft 0:00
         span &nbsp;
-        strong.playlist-controls  Hackathon Playlist
+        strong.playlist-controls &nbsp; Hackathon Playlist
       ul.nav.navbar-nav.navbar-right
         li
           a.fileinput-button
